# FinancialPlanner

./: .env.development  .env.example  .env.production  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  capacitor.config.ts  eslint.config.js  googleverify.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/: hooks.json
alerts/: __init__.py
data/: fetch.py
docs/: ANALYTICS.md  CURSOR-USAGE.md  FEATURE-ROADMAP.md  LEARNINGS.md  OVERVIEW.md  SEO-SIGNOFF.md  SPEC-UK.md  SPEC-US.md  SPEC.md  TASKS-ARCHITECTURE-ROADMAP.md  TASKS-SEO.md  TASKS.md  TEST-MAP.md  VALIDATION.md
e2e/: run.ts
infra/: README.md
mobile/: Cargo.toml  README.md
mobile/core/financial-planner-core/: Cargo.toml
mobile/core/financial-planner-core/include/: financial_planner_core.h
mobile/core/financial-planner-core/src/: android_jni.rs  ffi.rs  lib.rs  money.rs  rates.rs  simulate.rs
mobile/core/financial-planner-core/src/loan/: amortisation.rs  emi.rs  mod.rs
mobile/core/financial-planner-core/src/pf/: mod.rs  unemployment.rs
mobile/core/financial-planner-core/tests/: golden.rs
offline-site/: README.md  index.html
public/: sw.js
scripts/: a11y-audit.ts  add-video-narration.py  encrypt-brainstorm.mjs  git-build-info.ts  git-session-stats.mjs  lighthouse-audit.mjs  push-setup.sh  update-goldens-uk.ts  update-goldens-us.ts  update-goldens.ts  verify-android-sync.mjs  verify-production-release.mjs  verify-release-artifacts.mjs  verify-release-artifacts.test.mjs  verify-release-deploy.mjs  verify-seo-signoff.ts
(+517 files in other folders)
