[package]
name = "financial-planner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language-agnostic finance engine for FinancialPlanner mobile (SPEC §4)"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
